[rs-dataprovider] Remove unused plugin parameter : IAcquisitionScanPlugin